--- a/index.html
+++ b/index.html
@@ -84,10 +84,20 @@
   })(); </script>
   <center>
   <div style="font-family: 'Pacifico', serif; font-size:69pt;">Stormy's Website<br></div>
-<br>
- <div style="font-family: 'Special Elite', cursive; font-size:48pt;">Sorry to Interrupt<br></div><p style="font-size:30pt;"><br>
+<br><br>
+ <div style="font-family: 'Special Elite', cursive; font-size:48pt;">Welcome<br></div><p style="font-size:30pt;"><br>
 
-Coming Soon
+
+				<h3>My name is StormyJet, I make Internety things.</h3></center>
+                <center><p> I make <a href="https://dl.dropboxusercontent.com/u/67160210/metero%20game%20site%20and%20mirrors/landing.html">Meteor Game.</a> <br>
+				I also make <a href="https://www.youtube.com/user/ItsStormyJet"> videos on YouTube that are quite silly.</a>
+				<br> And also sometimes make <a href="https://play.google.com/store/music/artist/StormyJet?id=Aouzwuvng6wjmxh2ewz4lf2t7em"> music </a><br>
+				I tweet other things on my twitter account <a href="http://www.twitter.com/stormyjet">@StormyJet</a> and occasionally make comics at <a href="http://musicalpastriescomics.tumblr.com/">here.</a><br>
+				My personal blog that I sometimes update can be found <a href="http://www.stormysblog.tumblr.com"> here.</a><br>
+				I also moderate the <a href="http://www.nerdcubedservers.co.uk"> Nerdcubed Fanservers</a> So thats a thing. <small><small><small><small> <small><small><small><small>tealeafgaming</small></small></small></small></small></small></small></small><br>
+				I sometimes make things in HTML (this site) and I'm excitedly waiting for Watch_Dogs.<br>
+				-Stormy
+				<br> </p>
       </div>
 
       <hr>
