--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <center>
   <div style="font-family: 'Pacifico', serif; font-size:69pt;">Stormy's Website<br></div>
 <br><br>
- <div style="font-family: 'Special Elite', cursive; font-size:48pt;">Welcome<br></div><p style="font-size:30pt;"><br>
+ <div style="font-family: 'Special Elite', cursive; font-size:48pt;">Welcome<br></div><p style="font-size:30pt;">
 
 
 				<h3>My name is StormyJet, I make Internety things.</h3></center>
