--- a/index.html
+++ b/index.html
@@ -5,10 +5,27 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <title> Stormy's Site</title>
     <head>
-    <head profile="http://www.w3.org/2005/10/profile">
-<link rel="icon" 
-      type="image/png" 
-      href="img/favicon.png">
+    <link rel="shortcut icon" href="/img/favicon.ico">
+<link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
+<link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
+<link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
+<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
+<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
+<meta name="msapplication-TileColor" content="#b91d47">
+<meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
+<meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
+<meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
+<meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
+<meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
+<meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title></title>
