update index to remove temp mirror text

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
 
 				<h3>My name is StormyJet, I make Internety things.</h3></center>
-                <center><p> I make <a href="meteorgame.github.io">Meteor Game. (temp mirror)</a> <br>
+                <center><p> I make <a href="meteorgame.github.io">Meteor Game.</a> <br>
 				I also make <a href="https://www.youtube.com/user/ItsStormyJet"> videos on YouTube that are quite silly.</a>
 				<br> And also sometimes make <a href="https://play.google.com/store/music/artist/StormyJet?id=Aouzwuvng6wjmxh2ewz4lf2t7em"> music </a><br>
 				I tweet other things on my twitter account <a href="http://www.twitter.com/stormyjet">@StormyJet</a> and occasionally make comics at <a href="http://musicalpastriescomics.tumblr.com/">here.</a><br>
