added link to source

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 				I tweet other things on my twitter account <a href="http://www.twitter.com/stormyjet">@StormyJet</a> and occasionally make comics at <a href="http://musicalpastriescomics.tumblr.com/">here.</a><br>
 				My personal blog that I sometimes update can be found <a href="http://www.stormysblog.tumblr.com"> here.</a><br>
 				I also moderate the <a href="http://www.nerdcubedservers.co.uk"> Nerdcubed Fanservers</a> So thats a thing. <small><small><small><small> <small><small><small><small>tealeafgaming</small></small></small></small></small></small></small></small><br>
-				I sometimes make things in HTML (this site) and I'm excitedly waiting for Watch_Dogs.<br>
+				I sometimes make things in <a href="https://github.com/stormyjet/stormyjet.github.io"></a>HTML (this site)</a> and I'm excitedly waiting for Watch_Dogs.<br>
 				-Stormy
 				<br> </p>
       </div>
