--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       <footer>
     
       </footer>
+      <center><small> <a href="https://github.com/stormyjet/stormyjet.github.io">View Source</a></small></center>
     </div> <!-- /container -->        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
 
