--- a/index.html
+++ b/index.html
@@ -106,6 +106,25 @@
     s.parentNode.insertBefore(wf, s);
   })(); </script>
   <center>
+  
+  <div class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title">An Experiment</h4>
+      </div>
+      <div class="modal-body">
+        <p>One fine body&hellip;</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
   <div style="font-family: 'Pacifico', serif; font-size:69pt;">Stormy's Website<br></div>
 <br><br>
  <div style="font-family: 'Special Elite', cursive; font-size:48pt;">Welcome<br></div><p style="font-size:30pt;">
