--- a/index.html
+++ b/index.html
@@ -84,26 +84,26 @@
       <div class="row">
         <div class="col-lg-4">
           <h2>Meteor Game</h2>
-          <p class="text-danger">Warning: Kinda Hard</p>
           <p>Meteor Game is a game that I made for no reason. See more info on the site. </p>
-          <p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">Go to site &raquo;</a></p>
+          <p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
           <h2>MCFS</h2>
-          <p>Matt Collins Fanservers, aka best Fanservers </p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <p class="text-danger">Update: April Fools :)</p>
+          <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia </p>
+          <p><a class="btn btn-primary" href="http://mcfs.github.io" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-lg-4">
           <h2>About Me</h2>
           <p>I make <a href="https://www.youtube.com/user/ItsStormyJet">YouTube Videos </a><br>
           and I am a mod on the <a href="http://nerdcubedservers.co.uk">NerdCubed Fanservers</a><small></p>
-          <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+          <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
         </div>
       </div>
 
       <!-- Site footer -->
       <div class="footer">
-        <p>StormyJet</p>
+        <p>Stormy Network. Integrating al of Stormy's sites. Hosted on GitHub.</p>
       </div>
 
     </div> <!-- /container -->
