--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+    
     <link href="css/justified-nav.css" rel="stylesheet">
 
-   
+   <link href="css/justified-nav.css" rel="stylesheet"> <!-- STYLE SHEET FOR UNI-NAVBAR-->
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
