--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </head>
 
   <body>
-<center><p style="font-size='48pt';" class="text-danger">Warning: This site is under construction </p></center>
+<center><p style="font-size='48pt';" class="text-danger">Warning: This site is under construction, some things may be missing. </p></center>
     <div class="container">
 
       <div class="masthead">
