--- a/network.html
+++ b/network.html
@@ -53,8 +53,8 @@
       <div class="masthead">
         <center><h3 class="text-muted">Stormy's Website</h3></center>
         <ul class="nav nav-justified">
-          <li class="active"><a href="#">Stormy Network</a></li>
-          <li class="active"><a href="#">Home</a></li>
+          <li class="active"><a href="#">Storm Network</a></li>
+          <li><a href="http://stormyjet.github.io">Home</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>
           <li><a href="http://meteorgame.github.io">Meteor Game</a></li>
@@ -76,8 +76,8 @@
       <!-- Jumbotron -->
       
       <div class="jumbotron">
-        <h1>Hello!</h1>
-        <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
+        <h1>Storm Network </h1>
+        <p class="lead">If you see this, this is the network page. not the home</p>
         <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Learn More</a></p>-->
       </div>
 
