--- a/network.html
+++ b/network.html
@@ -51,7 +51,7 @@
     <div class="container">
 
       <div class="masthead">
-        <center><h3 class="text-muted">Stormy's Website</h3></center>
+        <center><h3 class="text-muted">Storm Network</h3></center>
         <ul class="nav nav-justified">
           <li class="active"><a href="#">Storm Network</a></li>
           <li><a href="http://stormyjet.github.io">Home</a></li>
@@ -77,25 +77,25 @@
       
       <div class="jumbotron">
         <h1>Storm Network </h1>
-        <p class="lead">If you see this, this is the network page. not the home</p>
+        <p class="lead">The Storm Network is a new way of integrating many websites into one unfied one</p>
         <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Learn More</a></p>-->
       </div>
 
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>Meteor Game</h2>
-          <p>Meteor Game is a game that I made for no reason. See more info on the site. </p>
-          <p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a></p>
+          <h2>How?</h2>
+          <p>By using the Uni-NavBar, users will always know where they are with a clear and concise navigation method </p>
+          <!--<p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a></p>-->
         </div>
         <div class="col-lg-4">
-          <h2>MCFS</h2>
+          <h2>Where can I get it?</h2>
           <p class="text-danger">Update: April Fools :)</p>
-          <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia </p>
-          <p><a class="btn btn-primary" href="http://mcfs.github.io" role="button">View details &raquo;</a></p>
+          <p>Right now, it is not available on anything but these websites, you are free to take it. Download link coming soon.</p>
+          <!--<p><a class="btn btn-primary" href="git link here" role="button">Download Now! &raquo;</a></p>-->
        </div>
         <div class="col-lg-4">
-          <h2>About Me</h2>
+          <h2>Other Info</h2>
           <p>I make <a href="https://www.youtube.com/user/ItsStormyJet">YouTube Videos </a><br>
           and I am a mod on the <a href="http://nerdcubedservers.co.uk">NerdCubed Fanservers</a><small></p>
           <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
