--- a/network.html
+++ b/network.html
@@ -90,9 +90,9 @@
         </div>
         <div class="col-lg-4">
           <h2>Where can I get it?</h2>
-          <p class="text-danger">Update: April Fools :)</p>
+          <p class="text-danger">Currently Unavailable</p>
           <p>Right now, it is not available on anything but these websites, you are free to take it. Download link coming soon.</p>
-          <!--<p><a class="btn btn-primary" href="git link here" role="button">Download Now! &raquo;</a></p>-->
+          <!--<p><a class="btn btn-primary" href="#" role="button">Download Now! &raquo;</a></p>-->
        </div>
         <div class="col-lg-4">
           <h2>Other Info</h2>
