--- a/network.html
+++ b/network.html
@@ -102,9 +102,9 @@
         </div>
       </div>
 
-      <!-- Site footer -->
+            <!-- Site footer -->
       <div class="footer">
-        <p>Stormy Network. Integrating al of Stormy's sites. Hosted on GitHub.</p>
+        <p>StormNetwork, Next Gen Site Integration.</p>
       </div>
 
     </div> <!-- /container -->
