--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
       <!-- Site footer -->
       <div class="footer">
-        <p>Stormy Network. Integrating al of Stormy's sites. Hosted on GitHub.</p>
+        <p>Powered by <a href="stormyjet.github.io/network.html">Storm Network</a></p>
       </div>
 
     </div> <!-- /container -->
