--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
 <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>Storm Network</title>
+    <title>Stormy's Website</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -51,11 +51,11 @@
     <div class="container">
 
       <div class="masthead">
-        <center><h3 class="text-muted">Storm Network</h3></center>
+        <center><h3 class="text-muted">Stormy's Blog</h3></center>
         <ul class="nav nav-justified">
-          <li class="active"><a href="#">Storm Network</a></li>
-          <li><a href="http://stormyjet.github.io">Home</a></li>
-          <li><a href="stormyjet.github.io/blog.html">Blog</a></li>
+          <li><a href="http://stormyjet.github.io/network.html">Storm Network</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="#">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>
           <li><a href="http://meteorgame.github.io">Meteor Game</a></li>
@@ -77,35 +77,35 @@
       <!-- Jumbotron -->
       
       <div class="jumbotron">
-        <h1>Storm Network </h1>
-        <p class="lead">The Storm Network is a new way of integrating many websites into one unfied one</p>
-        <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Learn More</a></p>-->
+        <h1>Thougts About DIVERGENT [Spoilers]</h1>
+        <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
+        <p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>
       </div>
 
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-lg-4">
-          <h2>How?</h2>
-          <p>By using the Uni-NavBar, users will always know where they are with a clear and concise navigation method </p>
-          <!--<p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a></p>-->
+          <h2>Meteor Game</h2>
+          <p>Meteor Game is a game that I made for no reason. See more info on the site. </p>
+          <p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-lg-4">
-          <h2>Where can I get it?</h2>
-          <p class="text-danger">Currently Unavailable</p>
-          <p>Right now, it is not available on anything but these websites, you are free to take it. Download link coming soon.</p>
-          <!--<p><a class="btn btn-primary" href="#" role="button">Download Now! &raquo;</a></p>-->
+          <h2>MCFS</h2>
+          <p class="text-danger">Update: April Fools :)</p>
+          <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia </p>
+          <p><a class="btn btn-primary" href="http://mcfs.github.io" role="button">View details &raquo;</a></p>
        </div>
         <div class="col-lg-4">
-          <h2>Other Info</h2>
+          <h2>About Me</h2>
           <p>I make <a href="https://www.youtube.com/user/ItsStormyJet">YouTube Videos </a><br>
           and I am a mod on the <a href="http://nerdcubedservers.co.uk">NerdCubed Fanservers</a><small></p>
           <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
         </div>
       </div>
 
-            <!-- Site footer -->
+      <!-- Site footer -->
       <div class="footer">
-        <p>StormNetwork, Next Gen Site Integration.</p>
+        <p>Powered by <a href="stormyjet.github.io/network.html">Storm Network</a></p>
       </div>
 
     </div> <!-- /container -->
