--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <ul class="nav nav-justified">
           <li><a href="http://stormyjet.github.io/network.html">Storm Network</a></li>
           <li class="active"><a href="#">Home</a></li>
+          <li><a href="stormyjet.github.io/blog.html">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>
           <li><a href="http://meteorgame.github.io">Meteor Game</a></li>
@@ -78,7 +79,7 @@
       <div class="jumbotron">
         <h1>Hello!</h1>
         <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
-        <!--<p><a class="btn btn-lg btn-success" href="#" role="button">Learn More</a></p>-->
+        <p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>
       </div>
 
       <!-- Example row of columns -->
