--- a/network.html
+++ b/network.html
@@ -47,7 +47,7 @@
   </head>
 
   <body>
-<center><p style="font-size='48pt';" class="text-danger">Warning: This site is under construction, some things may be missing. </p></center>
+<!--<center><p style="font-size='48pt';" class="text-danger">Warning Text Here</p></center>-->
     <div class="container">
 
       <div class="masthead">
@@ -55,7 +55,7 @@
         <ul class="nav nav-justified">
           <li class="active"><a href="#">Storm Network</a></li>
           <li><a href="http://stormyjet.github.io">Home</a></li>
-          <li><a href="stormyjet.github.io/blog.html">Blog</a></li>
+          <li><a href="http://stormyjet.github.io/blog.html">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>
           <li><a href="http://meteorgame.github.io">Meteor Game</a></li>
