--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <ul class="nav nav-justified">
           <li><a href="http://stormyjet.github.io/network.html">Storm Network</a></li>
           <li class="active"><a href="#">Home</a></li>
-          <li><a href="stormyjet.github.io/blog.html">Blog</a></li>
+          <li><a href="http://stormyjet.github.io/blog.html">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
           <!-- This line to be replaced with proper source--> <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>
           <li><a href="http://meteorgame.github.io">Meteor Game</a></li>
