--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="masthead">
         <center><h3 class="text-muted">Stormy's Website</h3></center>
         <ul class="nav nav-justified">
-          <li><a href="http://stormyjet.github.io/network.html">Storm Network</a></li>
+          <li><a href="network.html">Storm Network</a></li>
           <li class="active"><a href="#">Home</a></li>
           <li><a href="http://stormyjet.github.io/blog.html">Blog</a></li>
           <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
