--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,7 @@
   </head>
 
   <body>
-<center><p style="font-family:arial;color:red;font-size:48px;"> Spoiler Alert </p></center>-->
+<center><p style="color:red;font-size:20px;"> Spoiler Alert </p></center>
     <div class="container">
 
       <div class="masthead">
