--- a/blog.html
+++ b/blog.html
@@ -47,7 +47,8 @@
   </head>
 
   <body>
-<center><p style="color:red;font-size:20px;"> Spoiler Alert </p></center>
+
+  
     <div class="container">
 
       <div class="masthead">
@@ -77,9 +78,12 @@
       <!-- Jumbotron -->
       
       <div class="jumbotron">
-        <h1>Thougts About DIVERGENT [Spoilers]</h1>
-        <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
-        <p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>
+        <h1>The Divergent Movie [Spoilers]</h1>
+        <p class="lead">Oh boy... Ooh boy (rant incoming) <br> 
+        So I went to go see the new movie Divergent, don't get me wrong it was a great movie, I loved mostly every part about it, except for one specific part. <br>
+        Can you guess what it is? 
+        <h4> THE FUCKING ENDING WAS SHIT </h4><br></p>
+        <!--<p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>-->
       </div>
 
       <!-- Example row of columns -->
