--- a/blog.html
+++ b/blog.html
@@ -78,11 +78,29 @@
       <!-- Jumbotron -->
       
       <div class="jumbotron">
-        <h1>The Divergent Movie [Spoilers]</h1>
+        <h1>The Divergent Movie [Spoilers]</h1><br>
         <p class="lead">Oh boy... Ooh boy (rant incoming) <br> 
         So I went to go see the new movie Divergent, don't get me wrong it was a great movie, I loved mostly every part about it, except for one specific part. <br>
         Can you guess what it is? 
-        <h4> THE FUCKING ENDING WAS SHIT </h4><br></p>
+        <b> THE FUCKING ENDING WAS SHIT </b><br>
+        It wasn't the old "oh everything works out in the end" it was like <br>
+        <b> Lets kill THREE MAIN CHARACTERS AND END ON THAT </b> <br> 
+        This left me with the SHITTIEST cliffhanger ever! I mean the movie was great, but then Beatrice's Mom <b>DIES IN THE MOST ANTICLIMATIC WAY POSSIBLE</b><br>
+        Then her fucking dad is like oh, lets go murder the people to get to the control room, GUESS WHAT FUCKO<br>
+        You.
+        <br> Are.
+        <br> Going.
+        <br> To.
+        <br> Fucking.
+        <br> DIE <br>
+        WHAT THE FUCK DID YOU EXPECT FUCKTARD? DID YOU THINK THAT THE GUNS WILL TICKLE YOU? WHAT DID YOU THINK WOULD HAPPEN. <br>
+        What pisses me off about his death is that it isn't even announced like "oh my dad died so sad" the camera literally PANS AND ZOOMS ON HER BROTHER CRYING<br>
+        YES, HER BROTHER CRYING OVER A CORPSE. THIS FUCKING MOVIE. <br>
+        One final bit, the third main character death. Her friend WILL. Mother fucking "oh ur mind controlled lol dead"<br>
+        Beatrice you motherfucker, YOU KILLED YOUR MOTHER WITH YOUR STUPIDITY. HE IS MIND CONTROLLED, HE COULD NOT WAKE UP. YOUR MOTHER GOT SHOT BECAUSE OF YOU.
+<br> <b> SIGHS VERY LOUDLY </b><br>
+Other than that, it was a very good movie, 8.5/10<br>
+<b> Post by Stormy </b>        </p>
         <!--<p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>-->
       </div>
 
