--- a/blog.html
+++ b/blog.html
@@ -99,7 +99,7 @@
         One final bit, the third main character death. Her friend WILL. Mother fucking "oh ur mind controlled lol dead"<br>
         Beatrice you motherfucker, YOU KILLED YOUR MOTHER WITH YOUR STUPIDITY. HE IS MIND CONTROLLED, HE COULD NOT WAKE UP. YOUR MOTHER GOT SHOT BECAUSE OF YOU.
 <br> <b> SIGHS VERY LOUDLY </b><br>
-Other than that, it was a very good movie, 8.5/10<br>
+Other than that, it was a very good movie, 8.5/10<br><br>
 <b> Post by Stormy </b>        </p>
         <!--<p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>-->
       </div>
