--- a/network.html
+++ b/network.html
@@ -91,16 +91,15 @@
         </div>
         <div class="col-lg-4">
           <h2>Where can I get it?</h2>
-          <p class="text-danger">Currently Unavailable</p>
-          <p>Right now, it is not available on anything but these websites, you are free to take it. Download link coming soon.</p>
-          <!--<p><a class="btn btn-primary" href="#" role="button">Download Now! &raquo;</a></p>-->
+          <!--<p class="text-danger">Currently Unavailable</p>-->
+          <p>Available now on GitHub!</p>
+          <p><a class="btn btn-primary" href="https://github.com/stormyjet/StormNetwork" role="button">Download Now! &raquo;</a></p>
        </div>
-        <div class="col-lg-4">
+        <!--<div class="col-lg-4">
           <h2>Other Info</h2>
-          <p>I make <a href="https://www.youtube.com/user/ItsStormyJet">YouTube Videos </a><br>
-          and I am a mod on the <a href="http://nerdcubedservers.co.uk">NerdCubed Fanservers</a><small></p>
+          <p></p>
           <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
-        </div>
+        </div>-->
       </div>
 
             <!-- Site footer -->
