--- a/network.html
+++ b/network.html
@@ -95,11 +95,11 @@
           <p>Available now on GitHub!</p>
           <p><a class="btn btn-primary" href="https://github.com/stormyjet/StormNetwork" role="button">Download Now! &raquo;</a></p>
        </div>
-        <!--<div class="col-lg-4">
-          <h2>Other Info</h2>
-          <p></p>
+        <div class="col-lg-4">
+          <h2>Credits</h2>
+          <p>All credit goes to Bootstrap for supplying the CSS and the design</p>
           <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
-        </div>-->
+        </div>
       </div>
 
             <!-- Site footer -->
