--- a/network.html
+++ b/network.html
@@ -103,9 +103,9 @@
       </div>
 
             <!-- Site footer -->
-      <div class="footer">
+      <center<div class="footer">
         <p>StormNetwork, Next Gen Site Integration.</p>
-      </div>
+      </div></center>
 
     </div> <!-- /container -->
 
