--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </head>
 
   <body>
-<center><p style="color:red;font-size:20px;"> This website is under construction. Things may be missing. </p></center>
+<!--<center><p style="color:red;font-size:20px;"> Warning Text </p></center>-->
     <div class="container">
 
       <div class="masthead">
@@ -79,7 +79,7 @@
       <div class="jumbotron">
         <h1>Hello!</h1>
         <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
-        <p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>
+        <p><a class="btn btn-lg btn-success" href="blog.html" role="button">New Blog Post. Click Here!</a></p>
       </div>
 
       <!-- Example row of columns -->
