--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@ Other than that, it was a very good movie, 8.5/10<br><br>
 
       <!-- Site footer -->
       <div class="footer">
-        <p>Powered by <a href="stormyjet.github.io/network.html">Storm Network</a></p>
+        <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a></p>
       </div>
 
     </div> <!-- /container -->
