--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
       <!-- Site footer -->
       <div class="footer">
-        <p>Powered by <a href="stormyjet.github.io/network.html">Storm Network</a></p>
+        <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a></p>
       </div>
 
     </div> <!-- /container -->
