--- a/404.html
+++ b/404.html
@@ -77,7 +77,8 @@
       <!-- Jumbotron -->
       
       <div class="jumbotron">
-        <h1>Well thats unfortunate.</h1>
+        <h1>Well thats unfortunate.</h1><br>
+        <h2 style="color:lightgray">I tried my hardest :( -The Server </h2>
         <p class="lead">Are you lost? You tried to go to a page that does not exsist <small><small>Yet(maybe)</small></small> Click the button below to go to <a href="index.html">the home page</a><small> Or there I don't care </small> </p>
         <p><a class="btn btn-lg btn-success" href="index.html" role="button">Click Here</a></p>
       </div>
