--- a/dickbutt.html
+++ b/dickbutt.html
@@ -50,6 +50,7 @@
     <div class="container">
 
       <div class="masthead">
+        <img src="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg" alt="DickButt">
         <center><h3 class="text-muted">DickButt Network</h3></center>
         <ul class="nav nav-justified">
           <li class="active"><a href="http://stormyjet.github.io/network.html">DickButt Network</a></li>
