--- a/dickbutt.html
+++ b/dickbutt.html
@@ -28,7 +28,7 @@
 <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
 <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>404</title>
+    <title>DICKBUTT</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -50,7 +50,7 @@
     <div class="container">
 
       <div class="masthead">
-        <img src="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg" alt="DickButt">
+
         <center><h3 class="text-muted">DickButt Network</h3></center>
         <ul class="nav nav-justified">
           <li class="active"><a href="http://stormyjet.github.io/network.html">DickButt Network</a></li>
@@ -80,8 +80,8 @@
       <div class="jumbotron">
         <h1>Well thats DickButt.</h1>
         <h2 style="color:lightgray">I tried my hardest :( -The DickButt </h2>
-        <p class="lead">Are you DickButt? You tried to go to a page that does not DickButt.  Click the DickButt below to go to <a href="index.html">the DickButt page</a><small> Or DickButt I don't care </small> </p>
-        <p><a class="btn btn-lg btn-success" href="index.html" role="button">DickButt Here</a></p>
+        <p class="lead">Are you DickButt? You tried to go to a page that does not DickButt.  Click the DickButt below to go to <a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">the DickButt page</a><small> Or DickButt I don't care </small> </p>
+        <p><a class="btn btn-lg btn-success" href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg" role="button">DickButt Here</a></p>
       </div>
 
       <!-- Example row of columns -->
