--- a/dickbutt.html
+++ b/dickbutt.html
@@ -53,15 +53,15 @@
 
         <center><h3 class="text-muted">DickButt Network</h3></center>
         <ul class="nav nav-justified">
-          <li class="active"><a href="http://stormyjet.github.io/network.html">DickButt Network</a></li>
-          <li><a href="index.html">DickButt</a></li>
-          <li><a href="http://stormyjet.github.io/blog.html">DickButt</a></li>
-          <li><a href="http://twitter.com/stormyjet">DickButt</a></li>
+          <li class="active"><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
+          <li><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
+          <li><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
+          <li><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
           <!-- This line to be replaced with proper source--> <!--<li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a></li>-->
-          <li><a href="http://meteorgame.github.io">DickButt</a></li>
-          <li><a href="http://mcfs.github.io">DickButt</a></li>
-          <li><a href="http://stormyjettest.github.io">DickButt</a></li>
-          <li class="active"><a href="#">DickButt Error :(</a></li>
+          <li><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
+          <li><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
+          <li><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
+          <li class="active"><a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt</a></li>
           
         </ul>
       </div>
@@ -89,7 +89,7 @@
 
       <!-- Site footer -->
       <div class="footer">
-        <p>Powered by <a href="http://stormyjet.github.io/network.html">DickButt Network</a></p>
+        <p>Powered by <a href="http://i3.kym-cdn.com/entries/icons/original/000/001/030/dickbutt.jpg">DickButt Network</a></p>
       </div>
 
     </div> <!-- /container -->
