--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
       
 
       <!-- Jumbotron -->
-      
+      <--
       <div class="jumbotron">
         <h1>The Divergent Movie [Spoilers]</h1><br>
         <p class="lead">Oh boy... Ooh boy (rant incoming) <br> 
@@ -100,7 +100,7 @@
         Beatrice you motherfucker, YOU KILLED YOUR MOTHER WITH YOUR STUPIDITY. HE IS MIND CONTROLLED, HE COULD NOT WAKE UP. YOUR MOTHER GOT SHOT BECAUSE OF YOU.
 <br> <b> SIGHS VERY LOUDLY </b><br>
 Other than that, it was a very good movie, 8.5/10<br><br>
-<b> Post by Stormy </b>        </p>
+<b> Post by Stormy </b>        </p>-->
         <!--<p><a class="btn btn-lg btn-success" href="blog.html" role="button">I recently saw Divergent. Click here for my thoughts.</a></p>-->
       </div>
 
