--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="jumbotron">
         <h1>Hello!</h1>
         <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
-        <p><a class="btn btn-lg btn-success" href="blog.html" role="button">New Blog Post!</a></p>
+        <!--<p><a class="btn btn-lg btn-success" href="blog.html" role="button">New Blog Post!</a></p>-->
       </div>
 
       <!-- Example row of columns -->
