--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
 
-    <link href="css/justified-nav.css" rel="stylesheet">
+
 
     <link href="css/justified-nav.css" rel="stylesheet">
     <!-- STYLE SHEET FOR UNI-NAVBAR-->
@@ -49,6 +49,15 @@
 
 <body>
     <!--<center><p style="color:red;font-size:20px;"> Warning Text </p></center>-->
+    <center>
+        <h2 class="nocss">Wanna try that again?</h1>
+            <h3 class="nocss">Looks like the page didn't load properly. </h2>
+        <h3 class="nocss">Click <a href="index.html">Here</a> to reload the page. Hopefully it works!</h3>
+        <h4 class="nocss">Sorry for the inconvenience</h4>
+        <h5 class="nocss">If you're smart, the CSS didn't load, so this happened. Look at the code for more info.</h5>
+        <!-- HOW THE CSS THING WORKS! 
+So when the css doesn't load, the classes for the text don't load because they are contained in the CSS. When it doesn't load, the class that contins the part about the class "nocss" having 0 opacity (and being small etc.) doesn't load. So the browser shows it because it isn't told how to make it look. Yay.-->
+    </center>
     <div class="container">
 
         <div class="masthead">
