remove dumb delay

--- a/network.html
+++ b/network.html
@@ -11,9 +11,9 @@
     </script>
 </head>
 
-<body onLoad="setTimeout('delayer()', 5000)">
+<body onLoad="setTimeout('delayer()', 0)">
     <h2>Notice</h2>
-    <p>This page is being redirected to a new location. If you do not have javascript enabled, <a href="http://stormyjet.github.io/sNet">Click Here.</a>
+    <p>This page has a new home, If you are not redirected,  <a href="http://stormyjet.github.io/sNet">Click Here.</a>
     </p>
 
 </body>
