--- a/network.html
+++ b/network.html
@@ -62,7 +62,7 @@
         </center>
 
         <!-- Jumbotron -->
-
+<noscript><h1>This is a redirect gate</h1><p>Usually, you would be redirected to the page, but you disabled Javascript. Please add us to your whitelist? I understand if you don't like screamers or whatever, but I'd never do that (ever) because they suck. Add this website to your whitelist please? </p></noscript>
         <div class="jumbotron">
             <h1>Hey!</h1>
             <p class="lead">This page has a new home, and you should be redirected.</p>
