--- a/network.html
+++ b/network.html
@@ -62,7 +62,8 @@
         </center>
 
         <!-- Jumbotron -->
-<noscript><h1>This is a redirect gate</h1><p>Usually, you would be redirected to the page, but you disabled Javascript. Please add us to your whitelist? I understand if you don't like screamers or whatever, but I'd never do that (ever) because they suck. Add this website to your whitelist please? </p></noscript>
+<noscript><div class="alert alert-danger">
+                <strong>Hey you! </strong>You need to have Javascript enabled for QuickPages to work, otherwise you will have to click something <strong></strong>EVERY TIME</strong></div></noscript>
         <div class="jumbotron">
             <h1>Hey!</h1>
             <p class="lead">This page has a new home, and you should be redirected.</p>
