--- a/network.html
+++ b/network.html
@@ -62,8 +62,8 @@
         </center>
 
         <!-- Jumbotron -->
-<noscript><div class="alert alert-danger">
-                <strong>Hey you! </strong>You need to have Javascript enabled for QuickPages to work, otherwise you will have to click something <strong></strong>EVERY TIME</strong></div></noscript>
+<noscript><center><div class="alert alert-danger">
+                <strong>Hey you! </strong>You need to have Javascript enabled for QuickPages to work, otherwise you will have to click something <strong></strong>EVERY TIME</strong></div></center></noscript>
         <div class="jumbotron">
             <h1>Hey!</h1>
             <p class="lead">This page has a new home, and you should be redirected.</p>
