--- a/blog.html
+++ b/blog.html
@@ -49,7 +49,8 @@
 
 <body>
 
-
+<noscript><center><div class="alert alert-info">
+                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div></center></noscript>
     <div class="container">
 
         <div class="masthead">
