--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <!--<center><p style="color:red;font-size:20px;"> Warning Text </p></center>-->
 
     </center>
+    <noscript><center><div class="alert alert-info">
+                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div></center></noscript>
     <div class="container">
 
         <div class="masthead">
