--- a/snetdl/tarball.html
+++ b/snetdl/tarball.html
@@ -79,6 +79,7 @@
         <p><a class="btn btn-lg btn-warning" href="https://github.com/stormyjet/sNet/tarball/beta" role="button">sNet 1.2canary [beta, be careful] </a>
         </p>
         <p><a class="btn btn-lg btn-info" href="zipball.html" role="button">Download as a .zip </a>
+            <p><a class="btn btn-lg btn-danger" href="http://stormyjet.github.io/sNet" role="button">Back to sNet Homepage</a>
     </div>
 
 
