--- a/index.html
+++ b/index.html
@@ -51,8 +51,12 @@
     <!--<center><p style="color:red;font-size:20px;"> Warning Text </p></center>-->
 
     </center>
-    <noscript><center><div class="alert alert-info">
-                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div></center></noscript>
+    <noscript>
+        <center>
+            <div class="alert alert-info">
+                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div>
+        </center>
+    </noscript>
     <div class="container">
 
         <div class="masthead">
@@ -60,7 +64,7 @@
                 <h3 class="text-muted">Stormy's Website</h3>
             </center>
             <ul class="nav nav-justified">
-                
+
                 <li class="active"><a href="#">Home</a>
                 </li>
                 <li><a href="http://stormyjet.github.io/blog.html">Blog</a>
@@ -99,7 +103,7 @@
         <div class="jumbotron">
             <h1>Hello!</h1>
             <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
-            <p><a class="btn btn-lg btn-success" href="blog.html" role="button">New Blog Post!</a>
+            <p><a class="btn btn-lg btn-info" href="blog.html" role="button">New Blog Post!</a>
             </p>
         </div>
 
