--- a/index.html
+++ b/index.html
@@ -123,23 +123,26 @@
                 </p>
             </div>
             <div class="col-lg-4">
-                <h2>About Me</h2>
-                <p>I make <a href="https://www.youtube.com/user/ItsStormyJet">YouTube Videos </a>
-                    <br>and I am a mod on the <a href="http://nerdcubedservers.co.uk">NerdCubed Fanservers</a><small></p>
-          <!--<p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>-->
+                <h2>sNet</h2>
+                <p>sNet is a way to unify many websites. It's pretty cool I think.</p>
+                <p><a class="btn btn-primary" href="network.html" role="button">View details &raquo;</a>
+                </p>
+            </div>
         </div>
-      </div>
 
-      <!-- Site footer -->
-      <div class="footer">
-        <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a></p>
-      </div>
+        <!-- Site footer -->
+        <div class="footer">
+            <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a>
+            </p>
+        </div>
 
-    </div> <!-- /container -->
+    </div>
+    <!-- /container -->
 
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-  </body>
+</body>
+
 </html>
