--- a/blog.html
+++ b/blog.html
@@ -49,8 +49,12 @@
 
 <body>
 
-<noscript><center><div class="alert alert-info">
-                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div></center></noscript>
+    <noscript>
+        <center>
+            <div class="alert alert-info">
+                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div>
+        </center>
+    </noscript>
     <div class="container">
 
         <div class="masthead">
@@ -58,8 +62,6 @@
                 <h3 class="text-muted">Stormy's Blog</h3>
             </center>
             <ul class="nav nav-justified">
-                <li><a href="http://stormyjet.github.io/network.html">Storm Network</a>
-                </li>
                 <li><a href="index.html">Home</a>
                 </li>
                 <li class="active"><a href="#">Blog</a>
@@ -128,7 +130,7 @@
 
             <!-- Site footer -->
             <div class="footer">
-                <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a>
+                <p>Powered by <a href="http://stormyjet.github.io/network.html">sNet</a>
                 </p>
             </div>
 
