--- a/404.html
+++ b/404.html
@@ -83,7 +83,13 @@
           <li><a href="http://mcfs.github.io">MCFS</a></li>-->
 
 
+        <center>
+            <p class="nocss">Whoa there.
+                <br>Looks like the page didn't load properly.
+                <br>Click <a href="#">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
+            </p>
 
+        </center>
 
 
         <!-- Jumbotron -->
