--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <!-- Site footer -->
         <div class="footer">
-            <p>Powered by <a href="http://stormyjet.github.io/network.html">Storm Network</a>
+            <p>Powered by <a href="http://stormyjet.github.io/network.html">sNet</a>
             </p>
         </div>
 
