--- a/snetdl/tarball.html
+++ b/snetdl/tarball.html
@@ -29,7 +29,7 @@
     <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
     <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
 
-    <title>Stormy's Website</title>
+    <title>Download sNet</title>
 
     <!-- Bootstrap core CSS -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
