--- a/snetdl/tarball.html
+++ b/snetdl/tarball.html
@@ -74,9 +74,9 @@
         <p class="lead">Click a button below for a download link.</p>
 
 
-        <p><a class="btn btn-lg btn-success" href="https://github.com/stormyjet/sNet/tarball/master" role="button">sNet 1.0lts</a>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/stormyjet/sNet/tarball/master" role="button">Stable Release</a>
         </p>
-        <p><a class="btn btn-lg btn-warning" href="https://github.com/stormyjet/sNet/tarball/beta" role="button">sNet 1.2canary [beta, be careful] </a>
+        <p><a class="btn btn-lg btn-warning" href="betatarask.html" role="button">Beta Release </a>
         </p>
         <p><a class="btn btn-lg btn-info" href="zipball.html" role="button">Download as a .zip </a>
             <p><a class="btn btn-lg btn-danger" href="http://stormyjet.github.io/sNet" role="button">Back to sNet Homepage</a>
