create dashboard.html and update 404,blog,index.html

--- a/404.html
+++ b/404.html
@@ -108,7 +108,7 @@
 
         <!-- Site footer -->
         <div class="footer">
-            <p>Powered by <a href="http://stormyjet.github.io/network.html">sNet</a>
+            <p>Powered by <a href="dashboard.html">Storm Engine</a> and <a href="network.html">sNet</a>.
             </p>
         </div>
     </div>
