--- a/topsecret.html
+++ b/topsecret.html
@@ -61,24 +61,24 @@
 
         <div class="masthead">
             <center>
-                <h3 class="text-muted"><a href="topsecret.html">Stormy's Website</a></h3>
+                <h3 class="text-muted">You found it!</a></h3>
             </center>
             <ul class="nav nav-justified">
 
-                <li class="active"><a href="#">Home</a>
+                <li class="disabled"><a href="#">S</a>
                 </li>
-                <li><a href="http://stormyjet.github.io/blog.html">Blog</a>
+                <li class="disabled"><a href="#">E</a>
                 </li>
-                <li><a href="http://twitter.com/stormyjet">Twitter</a>
+                <li class="disabled"><a href="#">C</a>
                 </li>
                 <!-- This line to be replaced with proper source-->
-                <li><a href="https://github.com/stormyjet/stormyjet.github.io">Source</a>
+                <li class="disabled"><a href="#">R</a>
                 </li>
-                <li><a href="http://meteorgame.github.io">Meteor Game</a>
+                <li class="disabled" class="disabled"><a href="#">E</a>
                 </li>
-                <li><a href="http://mcfs.github.io">MCFS</a>
+                <li class="disabled"><a href="#">T</a>
                 </li>
-                <li><a href="http://stormyjettest.github.io">Test Site</a>
+                <li class="disabled"><a href="#">PAGE</a>
                 </li>
 
             </ul>
@@ -93,46 +93,47 @@
         <center>
             <p class="nocss">Whoa there.
                 <br>Looks like the page didn't load properly.
-                <br>Click <a href="index.html">Here</a> to reload the page. Hopefully it works! Sorry for the inconvenience
-                <br>If you're smart, the CSS didn't load, so this happened. Look at the code for more info.</p>
+                <br>Click <a href="#">here</a>, the CSS didn't load, so this happened. Look at the code for more info.</p>
             <!-- So when the css doesn't load, the classes for the text don't load because they are contained in the CSS. When it doesn't load, the class that contins the part about the class "nocss" having 0 opacity (and being small etc.) doesn't load. So the browser shows it because it isn't told how to make it look. Yay.-->
         </center>
 
         <!-- Jumbotron -->
 
         <div class="jumbotron">
-            <h1>Hello!</h1>
-            <p class="lead">My name is Stormy, and I make internet things. Welcome to my website.</p>
-            <p><a class="btn btn-lg btn-info" href="blog.html" role="button">New Blog Post!</a>
+            <h1>This page does not exsist. </h1>
+            <p class="lead">This never happened, you see nothing</p>
+            <p><a class="btn btn-lg btn-info" href="index.html" role="button">Go Back.</a>
             </p>
         </div>
 
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-lg-4">
-                <h2>Meteor Game</h2>
-                <p>Meteor Game is a game that I made for no reason. See more info on the site.</p>
-                <p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a>
+                <h2>Spotify Playlist</h2>
+                <p>What I listen to while coding.</p>
+                <iframe src="https://embed.spotify.com/?uri=spotify:user:itsstormyjet:playlist:4uNDa8uw1a9yvlkhyrPELR&view=coverart" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
+                <!--<p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a>-->
                 </p>
             </div>
             <div class="col-lg-4">
-                <h2>MCFS</h2>
-                <p class="text-danger">Update: April Fools :)</p>
-                <p>Matt Collins Fanservers, the fanservers dedicated to Mattophobia</p>
-                <p><a class="btn btn-primary" href="http://mcfs.github.io" role="button">View details &raquo;</a>
+                <h2>This is a test</h2>
+                <p class="text-danger">of the emergency</p>
+                <p>broadcast</p>
+                <p><a class="btn btn-primary" href="#" role="button">system &raquo;</a>
                 </p>
             </div>
             <div class="col-lg-4">
-                <h2>sNet</h2>
-                <p>sNet is a way to unify many websites. It's pretty cool I think.</p>
-                <p><a class="btn btn-primary" href="network.html" role="button">View details &raquo;</a>
+                <h2>PLEASE BE ALARMED</h2>
+                <p>THERE WAS A CORE BREACH ON LEVEL 5. THIS IS NOT A DRILL. THIS IS NOT A DRILL. PREPARE EMERGENCY PROCEDURES. ALL NON-ESSENTIALS PLEASE HIDE. ALL ESSENTIALS, GO TO YOUR DESIGNATED EVACUEE AREA. <small>i see it mommy.</small>
+                </p>
+                <p><a class="btn btn-primary" href="#" role="button">PLEASE BRACE FOR IMPACT &raquo;</a>
                 </p>
             </div>
         </div>
 
         <!-- Site footer -->
         <div class="footer">
-            <p>Powered by <a href="dashboard.html">Storm Engine</a> and <a href="network.html">sNet</a>.
+            <p>It's not the end of the world, but you can see it from here.
             </p>
         </div>
 
