--- a/topsecret.html
+++ b/topsecret.html
@@ -1,149 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
+<title>[DATA EXPUNGED]</title>
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="/img/favicon.ico">
-    <link rel="apple-touch-icon" sizes="57x57" href="/img/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/img/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/img/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/img/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/img/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/img/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/img/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/img/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="/img/favicon-196x196.png" sizes="196x196">
-    <link rel="icon" type="image/png" href="/img/favicon-160x160.png" sizes="160x160">
-    <link rel="icon" type="image/png" href="/img/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-    <meta name="msapplication-TileColor" content="#b91d47">
-    <meta name="msapplication-TileImage" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square70x70logo" content="/img/mstile-70x70.png">
-    <meta name="msapplication-square144x144logo" content="/img/mstile-144x144.png">
-    <meta name="msapplication-square150x150logo" content="/img/mstile-150x150.png">
-    <meta name="msapplication-square310x310logo" content="/img/mstile-310x310.png">
-    <meta name="msapplication-wide310x150logo" content="/img/mstile-310x150.png">
-
-    <title>Stormy's Website</title>
-
-    <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
-
-
-
     <link href="css/justified-nav.css" rel="stylesheet">
-    <!-- STYLE SHEET FOR UNI-NAVBAR-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
+<center>
+    <h1 class="nocss">ERROR 500 OCCURED WHILE DISPLAYING THIS WEBPAGE. PLEASE TRY AGAIN.</p>
+<h2> The following is a log of unattended server access that we retrived on <kbd>DATA REDACTED</kbd>. To comply with the FBI, some data has been redacted.</h2><hr>
+    <h2>
+    <body><h1>ATTENTION ALL PERSONELL</h1>
+    <p class="lead">THERE HAS BEEN A CORE BREACH ON SECTORS
+        <br><strong>1,2,3,4,9,12</strong>
+        <br>ALL SAFTEY PERSONNELL PLEASE REPORT TO YOUR STATIONS. ALL RESEARCHERS, PLEASE REPORT TO YOUR SECTOR DESIGNATED SAFE ZONE.
+        <br>
+        <kbd>//transmission_interrupted_by_outside_source_</kbd>
+        <br>Greetings, my name is <kbd>[DATA EXPUNGED]</kbd> and I am here to talk to you about the <kbd>[REDACTED]</kbd> project. First, let me bring you to the supposed <kbd>[REDACTED]</kbd> "saftey officers".
+        <br>
+        <kbd>//transmission_frequency_changed_</kbd>
+        <br>1: nice call on that "core breach", we'll definetley be able to get the <kbd>DATA EXPUNGED</kbd> now.
+        <br>2: Yes, we can access it once one of these people give us the password for it.
+        <br>1: I say we kill them until they give it
+        <br>3: NO NO NO! That is a ba-<kbd>//transmission_ended_</kbd>
+        <br>1: With him out of the way, we will be able to get anything we need for <kbd>[DATA EXPUNGED]</kbd> now.
+        <br>
+        <kbd>//transmission_frequency_changed_</kbd>
+        <br>You see? <strong>THEY DO NOT CARE FOR YOUR SAFTEY. ANYONE INSIDE <kbd>[REDACTED]</kbd> LEAVE NOW OR YOU WILL DIE!</strong>
+        <br>
+        <kbd>//transmission_ended_</kbd>
 
-<body>
-    <!--<center><p style="color:red;font-size:20px;"> Warning Text </p></center>-->
+    </p>
+    </body>
+    <foot>
+        <h2>Click <a href="index.html">here</a> to return to the normal website. Tell nobody of what you have seen.</h2>
+    </foot>
 
-    </center>
-    <noscript>
-        <center>
-            <div class="alert alert-info">
-                <strong>Hey you! </strong>Would you kindly consider enabling Javascript? No screamers will ever be on this site! I promise!</div>
-        </center>
-    </noscript>
-    <div class="container">
-
-        <div class="masthead">
-            <center>
-                <h3 class="text-muted">You found it!</a></h3>
-            </center>
-            <ul class="nav nav-justified">
-
-                <li class="disabled"><a href="#">S</a>
-                </li>
-                <li class="disabled"><a href="#">E</a>
-                </li>
-                <li class="disabled"><a href="#">C</a>
-                </li>
-                <!-- This line to be replaced with proper source-->
-                <li class="disabled"><a href="#">R</a>
-                </li>
-                <li class="disabled" class="disabled"><a href="#">E</a>
-                </li>
-                <li class="disabled"><a href="#">T</a>
-                </li>
-                <li class="disabled"><a href="#">PAGE</a>
-                </li>
-
-            </ul>
-        </div>
-        <!--<li class="active"><a href="#">Test</a></li>
-          <li><a href="http://twitter.com/stormyjet">Twitter</a></li>
-          
-          <!--<li><a href="http://meteorgame.github.io">Meteor Game</a></li>
-          <li><a href="http://mcfs.github.io">MCFS</a></li>-->
-
-
-        <center>
-            <p class="nocss">Whoa there.
-                <br>Looks like the page didn't load properly.
-                <br>Click <a href="#">here</a>, the CSS didn't load, so this happened. Look at the code for more info.</p>
-            <!-- So when the css doesn't load, the classes for the text don't load because they are contained in the CSS. When it doesn't load, the class that contins the part about the class "nocss" having 0 opacity (and being small etc.) doesn't load. So the browser shows it because it isn't told how to make it look. Yay.-->
-        </center>
-
-        <!-- Jumbotron -->
-
-        <div class="jumbotron">
-            <h1>This page does not exsist. </h1>
-            <p class="lead">This never happened, you see nothing</p>
-            <p><a class="btn btn-lg btn-info" href="index.html" role="button">Go Back.</a>
-            </p>
-        </div>
-
-        <!-- Example row of columns -->
-        <div class="row">
-            <div class="col-lg-4">
-                <h2>Spotify Playlist</h2>
-                <p>What I listen to while coding.</p>
-                <iframe src="https://embed.spotify.com/?uri=spotify:user:itsstormyjet:playlist:4uNDa8uw1a9yvlkhyrPELR&view=coverart" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-                <!--<p><a class="btn btn-primary" href="http://meteorgame.github.io" role="button">View details &raquo;</a>-->
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <h2>This is a test</h2>
-                <p class="text-danger">of the emergency</p>
-                <p>broadcast</p>
-                <p><a class="btn btn-primary" href="#" role="button">system &raquo;</a>
-                </p>
-            </div>
-            <div class="col-lg-4">
-                <h2>PLEASE BE ALARMED</h2>
-                <p>THERE WAS A CORE BREACH ON LEVEL 5. THIS IS NOT A DRILL. THIS IS NOT A DRILL. PREPARE EMERGENCY PROCEDURES. ALL NON-ESSENTIALS PLEASE HIDE. ALL ESSENTIALS, GO TO YOUR DESIGNATED EVACUEE AREA. <small>i see it mommy.</small>
-                </p>
-                <p><a class="btn btn-primary" href="#" role="button">PLEASE BRACE FOR IMPACT &raquo;</a>
-                </p>
-            </div>
-        </div>
-
-        <!-- Site footer -->
-        <div class="footer">
-            <p>It's not the end of the world, but you can see it from here.
-            </p>
-        </div>
-
-    </div>
-    <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-</body>
+</center>
 
 </html>
